kubernetes/apps/mark-alldevops/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mark-alldevops
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mark-alldevops
  template:
    metadata:
      labels:
        app: mark-alldevops
    spec:
      imagePullSecrets:
        - name: ghcr-mark     
      containers:
        - name: mark-alldevops
          image: ghcr.io/mark-grigorev/mark-alldevops:latest # {"$imagepolicy": "flux-system:mark-alldevops"}
          ports:
            - containerPort: 80
          resources:
            requests: 
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 20m
              memory: 64Mi
