kubernetes/apps/mark-alldevops/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mark-alldevops
  namespace: apps
spec:
  selector:
    app: mark-alldevops
  ports:
    - port: 80
      targetPort: 80
