kubernetes/apps/mark-alldevops/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mark-alldevops
  namespace: apps
  annotations: 
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  parentRefs:
    - name: main
      namespace: networking
      sectionName: https-mark-alldevops
  hostnames:
    - mark.alldevops.ru
  rules:
    - backendRefs:
        - name: mark-alldevops
          port: 80
