kubernetes/apps/mark-alldevops/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mark-alldevops
  namespace: apps
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - mark-alldevops.ru
      secretName: mark-alldevops-tls
  rules:
    - host: mark-alldevops.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mark-alldevops
                port:
                  number: 80
